[package]
name = "tg-graphviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "rt"] }
teloxide = { version = "0.12.2", features = ["macros"] }
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
regex = "1.10.4"
log = "0.4.21"
unicode-segmentation = "1.11.0"
